Update .html for URLs

--- a/public/collector-info.html
+++ b/public/collector-info.html
@@ -568,7 +568,7 @@ select:focus {
         // Save to localStorage
         localStorage.setItem('submittedData', JSON.stringify(updatedSubmittedData));
         // Redirect to mail review page
-        window.location.href = '/mail-review';
+        window.location.href = '/mail-review.html';
       });
       function addressAutocomplete(containerElement) {
         const inputElement = containerElement.querySelector('input');
