--- a/public/dispute-form.html
+++ b/public/dispute-form.html
@@ -640,7 +640,7 @@ document.addEventListener('DOMContentLoaded', function () {
       });
       const result = await response.json();
       if (result.status === 'success') {
-        window.location.href = 'dispute-options';
+        window.location.href = 'dispute-options.html';
       } else {
         throw new Error('Submission failed');
       }
