--- a/public/articles-static/insider-guide.html
+++ b/public/articles-static/insider-guide.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
   <meta charset="utf-8">
-  <title>DebtCat | Debt Negotiation: An Insider's Guide to Dealing with Collectors</title>
+  <title>DebtCat | Insider's Guide to Negotiation with Collectors</title>
   <meta content="Ease that stress by guiding you through your rights and effective strategies for handling debt" name="description">
   <meta content="DebtCat | What to Do When a Debt Collector Contacts You" property="og:title">
   <meta content="Ease that stress by guiding you through your rights and effective strategies for handling debt" property="og:description">
@@ -45,7 +45,7 @@
 
   <!-- Article Content -->
   <div class="article-top">
-    <h1 class="h1-roboto">Debt Negotiation: An Insider's Guide to Dealing with Collectors</h1>
+    <h1 class="h1-roboto">Insider's Guide to Negotiation with Collectors</h1>
     <div class="category-pill">
       <div class="text">Debt Collection</div>
     </div>
