--- a/public/ty-pdf.html
+++ b/public/ty-pdf.html
@@ -1,5 +1,4 @@
-apner untill the footer?
-<!DOCTYPE html><!--  Last Published: Thu Feb 06 2025 20:19:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="66d29817282c8dd42b4f94cd" data-wf-site="66567a3f3727972f31237c21">
 <head>
   <meta charset="utf-8">
@@ -15,35 +14,51 @@ apner untill the footer?
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,300,regular,500,700,900"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: [
+          "Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic",
+          "Merriweather:300,300italic,400,400italic,700,700italic,900,900italic",
+          "Roboto:100,300,regular,500,700,900"
+        ]
+      }
+    });
+  </script>
+  <script type="text/javascript">
+    !function(o,c){
+      var n=c.documentElement,
+          t=" w-mod-";
+      n.className+=t+"js",
+      ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t+"touch")
+    }(window,document);
+  </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-DMRMQNLTBZ"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-DMRMQNLTBZ');</script><!--  Google tag (gtag.js) ** MOVED to site settings/integrations"
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DMRMQNLTBZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-DMRMQNLTBZ');
-</script>   -->
-  <!--   MS Clarity   -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMRMQNLTBZ"></script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('set', 'developer_id.dZGVlNj', true);
+    gtag('config', 'G-DMRMQNLTBZ');
+  </script>
+  <!-- MS Clarity -->
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r); t.async=1; t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "oc17kv2js6");
-</script>
+  </script>
   <script>
-  // Define the getIP function before loading the ipify script
-  function getIP(json) {
-    userIP = json.ip;
-  }
-  // Initialize the userIP variable
-  let userIP = '';
-</script>
+    // Define the getIP function before loading the ipify script
+    function getIP(json) {
+      userIP = json.ip;
+    }
+    // Initialize the userIP variable
+    let userIP = '';
+  </script>
   <script src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
   <link rel="stylesheet" href="https://unpkg.com/@geoapify/geocoder-autocomplete@^1/styles/minimal.css">
   <link href="/css/footer.css" rel="stylesheet" type="text/css">
@@ -54,7 +69,9 @@ apner untill the footer?
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-no-shadow-container w-nav">
         <div class="container-regular">
           <div class="navbar-wrapper">
-            <a href="index.html" class="navbar-brand w-nav-brand"><img src="images/debtcat-logo-inverse.svg" loading="lazy" width="70" height="Auto" alt="DebtCat logo" class="logo-header"></a>
+            <a href="index.html" class="navbar-brand w-nav-brand">
+              <img src="images/debtcat-logo-inverse.svg" loading="lazy" width="70" height="Auto" alt="DebtCat logo" class="logo-header">
+            </a>
             <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu w-list-unstyled">
                 <li class="list-item">
@@ -80,9 +97,13 @@ apner untill the footer?
     </div>
     <div class="w-layout-blockcontainer content-container w-container">
       <div class="w-layout-blockcontainer card-container w-container">
-        <div class="w-layout-blockcontainer static-page-card-content w-container"><img src="images/icon-success.svg" loading="lazy" width="Auto" alt="" class="thank-you-icon">
+        <div class="w-layout-blockcontainer static-page-card-content w-container">
+          <img src="images/icon-success.svg" loading="lazy" width="Auto" alt="" class="thank-you-icon">
           <h3 class="text-center h3-montserrat">Success! Your dispute letter was downloaded</h3>
-          <p class="thank-you-message">Now, mail or email this dispute letter to the collector&#x27;s address found on your collection notice. Thanks for using DebtCat! </p>
+          <p class="thank-you-message">
+            Now, mail or email this dispute letter to the collector&#x27;s address found on your collection notice.
+            Thanks for using DebtCat!
+          </p>
           <h4 class="h4-montserrat">Need to dispute another debt?</h4>
           <div class="button-wrapper-inside special">
             <a href="start-dispute.html" class="button-link w-inline-block">
@@ -91,79 +112,74 @@ apner untill the footer?
           </div>
         </div>
         <section class="related-article">
-          <h3 class="heading-8 article"><strong class="bold-text-2">Dispute with the Bureaus Too?</strong></h3>
+          <h3 class="heading-8 article">
+            <strong class="bold-text-2">Dispute with the Bureaus Too?</strong>
+          </h3>
           <div class="article-card">
             <a href="/articles-static/Collector-vs-Bureau.html" class="article-card-link w-inline-block">
-              <div class="w-layout-blockcontainer image-container w-container"><img src="images/pexels-rdne-9034783.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 63vw, (max-width: 767px) 354px, 374px" srcset="images/pexels-rdne-9034783-p-500.jpg 500w, images/pexels-rdne-9034783-p-800.jpg 800w, images/pexels-rdne-9034783-p-1080.jpg 1080w, images/pexels-rdne-9034783-p-1600.jpg 1600w, images/pexels-rdne-9034783-p-2000.jpg 2000w, images/pexels-rdne-9034783-p-2600.jpg 2600w, images/pexels-rdne-9034783-p-3200.jpg 3200w, images/pexels-rdne-9034783.jpg 6720w" class="image"></div>
+              <div class="w-layout-blockcontainer image-container w-container">
+                <img src="images/pexels-rdne-9034783.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 63vw, (max-width: 767px) 354px, 374px" 
+                srcset="images/pexels-rdne-9034783-p-500.jpg 500w, images/pexels-rdne-9034783-p-800.jpg 800w, images/pexels-rdne-9034783-p-1080.jpg 1080w, images/pexels-rdne-9034783-p-1600.jpg 1600w, images/pexels-rdne-9034783-p-2000.jpg 2000w, images/pexels-rdne-9034783-p-2600.jpg 2600w, images/pexels-rdne-9034783-p-3200.jpg 3200w, images/pexels-rdne-9034783.jpg 6720w" class="image">
+              </div>
               <div class="text-container">
                 <div class="catgeory-pill">
                   <div class="text">Debt Collection</div>
                 </div>
                 <div class="card-title">Debt Collector vs. Credit Bureau Disputes</div>
-                <div class="card-description">Let&#x27;s break down your options and create an action plan to reclaim...</div>
+                <div class="card-description">
+                  Let&#x27;s break down your options and create an action plan to reclaim...
+                </div>
                 <div class="card-more">READ MORE</div>
               </div>
             </a>
           </div>
         </section>
       </div>
-      <section class="code-section"></section>
     </div>
-    <!-- Footer -->
-<!-- Footer -->
-<!-- Footer -->
-<!-- Footer -->
-<!-- Footer -->
-<!-- Footer -->
-<!-- Footer -->
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-nav">
-      <div class="footer-links">
-        <a href="/start-dispute.html" class="footer-link">Dispute</a>
-        <a href="/articles.html" class="footer-link">Guides</a>
-        <a href="/chat.html" class="footer-link">Debt Chat</a>
-        <a href="/s/about.html" class="footer-link">About Us</a>
-        <a href="/s/fdcpa-checklist.html" class="footer-link">FDCPA Checklist</a>
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-nav">
+          <div class="footer-links">
+            <a href="/start-dispute.html" class="footer-link">Dispute</a>
+            <a href="/articles.html" class="footer-link">Guides</a>
+            <a href="/chat.html" class="footer-link">Debt Chat</a>
+            <a href="/s/about.html" class="footer-link">About Us</a>
+            <a href="/s/fdcpa-checklist.html" class="footer-link">FDCPA Checklist</a>
+          </div>
+          <div class="footer-social">
+            <a href="https://www.instagram.com/debtcat/" class="footer-social-link">
+              <img src="/images/social/Platform=Instagram, Color=Negative.svg" alt="Instagram" width="24" height="24">
+            </a>
+            <a href="https://www.threads.net/@debtcat" class="footer-social-link">
+              <img src="/images/social/Platform=Threads, Color=Negative.svg" alt="Threads" width="24" height="24">
+            </a>
+            <a href="https://x.com/DebtCatAI" class="footer-social-link">
+              <img src="/images/social/Platform=X (Twitter), Color=Negative.svg" alt="X (Twitter)" width="24" height="24">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=61564070911067" class="footer-social-link">
+              <img src="/images/social/Platform=Facebook, Color=Negative.svg" alt="Facebook" width="24" height="24">
+            </a>
+            <a href="https://www.tiktok.com/@debtcat" class="footer-social-link">
+              <img src="/images/social/Platform=TikTok, Color=Negative.svg" alt="TikTok" width="24" height="24">
+            </a>
+            <a href="https://www.youtube.com/@DebtCat" class="footer-social-link">
+              <img src="/images/social/Platform=YouTube, Color=Negative.svg" alt="YouTube" width="24" height="24">
+            </a>
+          </div>
+        </div>
+        <div class="footer-divider"></div>
+        <div class="footer-bottom">
+          <div class="footer-copyright">
+            © 2025 DebtCat. All rights reserved | Developed and authored with AI assistance ✨
+          </div>
+          <div class="footer-legal">
+            <a href="/s/tos.html" target="_blank" class="footer-legal-link">Terms Of Service</a>
+            <a href="/s/refund.html" target="_blank" class="footer-legal-link">Refund Policy</a>
+            <a href="/s/privacy-policy.html" target="_blank" class="footer-legal-link">Privacy Policy</a>
+          </div>
+        </div>
       </div>
-      <div class="footer-social">
-        <a href="https://www.instagram.com/debtcat/" class="footer-social-link">
-          <img src="/images/social/Platform=Instagram, Color=Negative.svg" alt="Instagram" width="24" height="24">
-        </a>
-        <a href="https://www.threads.net/@debtcat" class="footer-social-link">
-          <img src="/images/social/Platform=Threads, Color=Negative.svg" alt="Threads" width="24" height="24">
-        </a>
-        <a href="https://x.com/DebtCatAI" class="footer-social-link">
-          <img src="/images/social/Platform=X (Twitter), Color=Negative.svg" alt="X (Twitter)" width="24" height="24">
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61564070911067" class="footer-social-link">
-          <img src="/images/social/Platform=Facebook, Color=Negative.svg" alt="Facebook" width="24" height="24">
-        </a>
-        <a href="https://www.tiktok.com/@debtcat" class="footer-social-link">
-          <img src="/images/social/Platform=TikTok, Color=Negative.svg" alt="TikTok" width="24" height="24">
-        </a>
-        <a href="https://www.youtube.com/@DebtCat" class="footer-social-link">
-          <img src="/images/social/Platform=YouTube, Color=Negative.svg" alt="YouTube" width="24" height="24">
-        </a>
-      </div>
-    </div>
-    <div class="footer-divider"></div>
-    <div class="footer-bottom">
-      <div class="footer-copyright">© 2025 DebtCat. All rights reserved | Developed and authored with AI assistance ✨</div>
-      <div class="footer-legal">
-        <a href="/s/tos.html" target="_blank" class="footer-legal-link">Terms Of Service</a>
-        <a href="/s/refund.html" target="_blank" class="footer-legal-link">Refund Policy</a>
-        <a href="/s/privacy-policy.html" target="_blank" class="footer-legal-link">Privacy Policy</a>
-      </div>
-    </div>
-  </div>
-</footer>
-
-
-
-
-
-
+    </footer>
     <div class="cta-downloaded-file"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66567a3f3727972f31237c21" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
