--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     <div class="w-layout-blockcontainer content-container w-container">
       <section class="section-intro">
         <h1 class="h1-roboto text-white">Break Debt, Not Sweat</h1>
-        <h1 class="h1-montserrat text-white">Get personalized advice, dispute your debt, and <br>learn your rights</h1>
+        <h1 class="h1-montserrat text-white">Get personalized advice, dispute your debt, <br>learn your rights</h1>
       </section>
       <section class="section-options">
         <div class="w-layout-blockcontainer landing-page-option w-container">
