--- a/public/start-dispute.html
+++ b/public/start-dispute.html
@@ -255,7 +255,7 @@ fbq('track', 'PageView');
       });
     })();
   </script>
-        </body>
+  
         </html>
         <!--  Cookies Banner End  -->
         <!DOCTYPE html>
@@ -522,6 +522,18 @@ body {
             <!--  Call To Action Button  -->
             <a href="dispute-form.html" class="cta-button">Start Your Dispute</a>
           </div>
+          <script>
+// Add scroll event listener for header background color
+window.addEventListener('scroll', function() {
+navbar = document.querySelector('.navbar');
+if (window.scrollY > 0) {
+navbar.style.backgroundColor = '#3358EF';
+navbar.style.transition = 'background-color 0.3s ease';
+} else {
+navbar.style.backgroundColor = 'transparent';
+}
+});
+</script>
         </body>
         </html>
       </div>
