--- a/debtcat.webflow/s/fdcpa-checklist.html
+++ b/debtcat.webflow/s/fdcpa-checklist.html
@@ -418,7 +418,22 @@
       </div>
     </main>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66567a3f3727972f31237c21" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="../js/webflow.js" type="text/javascript"></script>
+  <script>
+    $(document).ready(function() {
+      var $navbar = $('.navbar');
+      $(window).scroll(function() {
+        if ($(this).scrollTop() > 0) {
+          $navbar.css({
+            'background-color': '#3358EF',
+            'transition': 'background-color 0.3s ease'
+          });
+        } else {
+          $navbar.css('background-color', 'transparent');
+        }
+      });
+    });
+  </script>
+  
+  
 </body>
 </html>
