--- a/public/collector-info.html
+++ b/public/collector-info.html
@@ -702,6 +702,18 @@ select:focus {
       }
     });
   </script>
+   <script>
+    // Add scroll event listener for header background color
+    window.addEventListener('scroll', function() {
+    navbar = document.querySelector('.navbar');
+    if (window.scrollY > 0) {
+    navbar.style.backgroundColor = '#3358EF';
+    navbar.style.transition = 'background-color 0.3s ease';
+    } else {
+    navbar.style.backgroundColor = 'transparent';
+    }
+    });
+    </script>
         </body>
         </html>
       </div>
