--- a/public/ty-chat.html
+++ b/public/ty-chat.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Feb 06 2025 20:19:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="66de3ea267c5af6501a916c8" data-wf-site="66567a3f3727972f31237c21">
 <head>
   <meta charset="utf-8">
@@ -14,35 +14,43 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Roboto:100,300,regular,500,700,900"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    WebFont.load({  
+      google: {    
+        families: [
+          "Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic",
+          "Merriweather:300,300italic,400,400italic,700,700italic,900,900italic",
+          "Roboto:100,300,regular,500,700,900"
+        ]  
+      }
+    });
+  </script>
+  <script type="text/javascript">
+    !function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);
+  </script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-DMRMQNLTBZ"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-DMRMQNLTBZ');</script><!--  Google tag (gtag.js) ** MOVED to site settings/integrations"
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DMRMQNLTBZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-DMRMQNLTBZ');
-</script>   -->
-  <!--   MS Clarity   -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMRMQNLTBZ"></script>
+  <script type="text/javascript">
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('set', 'developer_id.dZGVlNj', true);
+    gtag('config', 'G-DMRMQNLTBZ');
+  </script>
+  <!-- MS Clarity -->
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
         t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
         y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "oc17kv2js6");
-</script>
+  </script>
   <script>
-  // Define the getIP function before loading the ipify script
-  function getIP(json) {
-    userIP = json.ip;
-  }
-  // Initialize the userIP variable
-  let userIP = '';
-</script>
+    // Define the getIP function before loading the ipify script
+    function getIP(json) { userIP = json.ip; }
+    let userIP = '';
+  </script>
   <script src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
   <link rel="stylesheet" href="https://unpkg.com/@geoapify/geocoder-autocomplete@^1/styles/minimal.css">
 </head>
@@ -52,7 +60,9 @@
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-no-shadow-container w-nav">
         <div class="container-regular">
           <div class="navbar-wrapper">
-            <a href="index.html" class="navbar-brand w-nav-brand"><img src="images/debtcat-logo-inverse.svg" loading="lazy" width="70" height="Auto" alt="DebtCat logo" class="logo-header"></a>
+            <a href="index.html" class="navbar-brand w-nav-brand">
+              <img src="images/debtcat-logo-inverse.svg" loading="lazy" width="70" height="Auto" alt="DebtCat logo" class="logo-header">
+            </a>
             <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu w-list-unstyled">
                 <li class="list-item">
@@ -78,7 +88,8 @@
     </div>
     <div class="w-layout-blockcontainer content-container w-container">
       <div class="w-layout-blockcontainer card-container w-container">
-        <div class="w-layout-blockcontainer static-page-card-content w-container"><img src="images/icon-success.svg" loading="lazy" width="Auto" alt="" class="thank-you-icon">
+        <div class="w-layout-blockcontainer static-page-card-content w-container">
+          <img src="images/icon-success.svg" loading="lazy" width="Auto" alt="" class="thank-you-icon">
           <div class="w-embed w-script">
             <!DOCTYPE html>
             <html lang="en">
@@ -87,53 +98,62 @@
               <meta name="viewport" content="width=device-width, initial-scale=1">
               <title>Chat Confirmation</title>
               <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-    body {
-      display: flex;
-      justify-content: center; 
-      align-items: center;
-      min-height: 100vh;
-      background-color: #f0f0f0;
-      font-family: 'Montserrat', Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      box-sizing: border-box;
-      text-align: center;
-    }
-    h2 {
-      font-size: 24px;
-      color: #000000;
-      font-weight: 700;
-      margin: 0;
-       margin-bottom: 50px;
-      padding: 0;
-    }
-  </style>
+                @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+                body {
+                  display: flex;
+                  justify-content: center; 
+                  align-items: center;
+                  min-height: 100vh;
+                  background-color: #f0f0f0;
+                  font-family: 'Montserrat', Arial, sans-serif;
+                  margin: 0;
+                  padding: 20px;
+                  box-sizing: border-box;
+                  text-align: center;
+                }
+                h2 {
+                  font-size: 24px;
+                  color: #000000;
+                  font-weight: 700;
+                  margin: 0;
+                  margin-bottom: 50px;
+                  padding: 0;
+                }
+              </style>
             </head>
             <body>
               <h2 id="thankYouTitle">Thank You!</h2>
               <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      // Retrieve the submitted data from localStorage
-      const submittedData = JSON.parse(localStorage.getItem("submittedData"));
-      // Get reference to the header element
-      const titleElement = document.getElementById("thankYouTitle");
-      // Check if submittedData exists to prevent errors
-      if (submittedData && submittedData.chatSent) {
-        if (submittedData.chatSent === "EmailMe") {
-          titleElement.innerText = "We just emailed you the chat transcript!";
-        } else if (submittedData.chatSent === "PDF") {
-          titleElement.innerText = "Your chat transcript has downloaded!";
-        } else {
-          // Fallback message if chatSent has an unexpected value
-          titleElement.innerText = "Action Completed!";
-        }
-      } else {
-        // Fallback message if submittedData is missing
-        titleElement.innerText = "Action Completed!";
-      }
-    });
-  </script>
+                document.addEventListener("DOMContentLoaded", function () {
+                  // Retrieve the submitted data from localStorage
+                  const submittedData = JSON.parse(localStorage.getItem("submittedData"));
+                  // Get reference to the header element
+                  const titleElement = document.getElementById("thankYouTitle");
+                  if (submittedData && submittedData.chatSent) {
+                    if (submittedData.chatSent === "EmailMe") {
+                      titleElement.innerText = "We just emailed you the chat transcript!";
+                    } else if (submittedData.chatSent === "PDF") {
+                      titleElement.innerText = "Your chat transcript has downloaded!";
+                    } else {
+                      titleElement.innerText = "Action Completed!";
+                    }
+                  } else {
+                    titleElement.innerText = "Action Completed!";
+                  }
+                });
+              </script>
+              <script>
+                // Existing header background color scroll behavior
+                window.addEventListener('scroll', function() {
+                  var navbar = document.querySelector('.navbar');
+                  if (window.scrollY > 0) {
+                    navbar.style.backgroundColor = '#3358EF';
+                    navbar.style.transition = 'background-color 0.3s ease';
+                  } else {
+                    navbar.style.backgroundColor = 'transparent';
+                  }
+                });
+              </script>
             </body>
             </html>
           </div>
@@ -148,12 +168,14 @@
           <h3 class="heading-8 article">Ready to Settle a Debt? <br>Here’s Your Guide</h3>
           <div class="article-card">
             <a href="/articles-static/insider-guide.html" class="article-card-link w-inline-block">
-              <div class="w-layout-blockcontainer image-container w-container"><img src="images/man-talking-on-cellphone.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 63vw, (max-width: 767px) 354px, 374px" srcset="images/man-talking-on-cellphone-p-500.jpg 500w, images/man-talking-on-cellphone-p-800.jpg 800w, images/man-talking-on-cellphone-p-1080.jpg 1080w, images/man-talking-on-cellphone-p-1600.jpg 1600w, images/man-talking-on-cellphone-p-2000.jpg 2000w, images/man-talking-on-cellphone-p-2600.jpg 2600w, images/man-talking-on-cellphone-p-3200.jpg 3200w, images/man-talking-on-cellphone.jpg 4460w" class="image"></div>
+              <div class="w-layout-blockcontainer image-container w-container">
+                <img src="images/man-talking-on-cellphone.jpg" loading="lazy" alt="" sizes="(max-width: 479px) 63vw, (max-width: 767px) 354px, 374px" srcset="images/man-talking-on-cellphone-p-500.jpg 500w, images/man-talking-on-cellphone-p-800.jpg 800w, images/man-talking-on-cellphone-p-1080.jpg 1080w, images/man-talking-on-cellphone-p-1600.jpg 1600w, images/man-talking-on-cellphone-p-2000.jpg 2000w, images/man-talking-on-cellphone-p-2600.jpg 2600w, images/man-talking-on-cellphone-p-3200.jpg 3200w, images/man-talking-on-cellphone.jpg 4460w" class="image">
+              </div>
               <div class="text-container">
                 <div class="catgeory-pill">
                   <div class="text">Debt Collection</div>
                 </div>
-                <div class="card-title">Debt Negotiation: An Insider&#x27;s Guide to Dealing with Collectors</div>
+                <div class="card-title">Debt Negotiation: An Insider's Guide to Dealing with Collectors</div>
                 <div class="card-description">By understanding your rights and exploring your options, you can negotiate your debt down to...</div>
                 <div class="card-more">READ MORE</div>
               </div>
@@ -195,7 +217,9 @@
         </div>
         <div class="footer-divider-two"></div>
         <div class="footer-bottom">
-          <div class="footer-copyright">© 2025 DebtCat. All rights reserved | Developed and authored with AI assistance ✨   <br></div>
+          <div class="footer-copyright">
+            © 2025 DebtCat. All rights reserved | Developed and authored with AI assistance ✨   <br>
+          </div>
           <div class="footer-legal-block">
             <a href="s/tos.html" target="_blank" class="footer-legal-link">Terms Of Service</a>
             <a href="s/refund.html" target="_blank" class="footer-legal-link">Refund Policy</a>
@@ -207,5 +231,16 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66567a3f3727972f31237c21" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <!-- Hardcode fixed header rule -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var navbar = document.querySelector('.navbar');
+      navbar.style.position = 'fixed';
+      navbar.style.top = '0';
+      navbar.style.left = '0';
+      navbar.style.width = '100%';
+      navbar.style.zIndex = '10000';
+    });
+  </script>
 </body>
 </html>
