--- a/public/ty-email-myself.html
+++ b/public/ty-email-myself.html
@@ -166,5 +166,17 @@
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66567a3f3727972f31237c21" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+  <script>
+    // Add scroll event listener for header background color
+    window.addEventListener('scroll', function() {
+    navbar = document.querySelector('.navbar');
+    if (window.scrollY > 0) {
+    navbar.style.backgroundColor = '#3358EF';
+    navbar.style.transition = 'background-color 0.3s ease';
+    } else {
+    navbar.style.backgroundColor = 'transparent';
+    }
+    });
+    </script>
 </body>
 </html>
