--- a/public/index.html
+++ b/public/index.html
@@ -387,6 +387,57 @@
             from { opacity: 0; }
             to { opacity: 1; }
           }
+
+          .newsletter-section {
+    background-color: #f5f5f5;
+    border-radius: 12px;
+    padding: 40px 20px;
+    text-align: center;
+    max-width: 600px;
+    margin: 40px auto;
+  }
+
+  .newsletter-section h2 {
+    margin: 0 0 16px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: #1A1A1E;
+  }
+
+  .newsletter-subtitle {
+    margin-bottom: 24px;
+    color: #4A4A4A;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  #newsletter-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+
+  #newsletter-form input[type="email"] {
+    width: 100%;
+    padding: 12px 16px;
+    border: 2px solid #000;
+    border-radius: 8px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
         </style>
       </div>
     </div>
