Cards and other fixes

--- a/public/articles.html
+++ b/public/articles.html
@@ -25,6 +25,7 @@
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-DMRMQNLTBZ"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('set', 'developer_id.dZGVlNj', true);gtag('js', new Date());gtag('config', 'G-DMRMQNLTBZ');</script>
   <link href="/css/footer.css" rel="stylesheet" type="text/css">
+  <link href="/css/article-card-fix.css" rel="stylesheet" type="text/css">
 </head>
 <body class="body">
   <div class="container-body">
