--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
                 <div class="text-container">
                   <div class="catgeory-pill"><div class="text">Debt Collection</div></div>
                   <div class="card-title">What is debt consolidation?</div>
-                  <div class="card-description">Understand what debt consolidation is, how it works, and its potential risks and benefits.</div>
+                  <div class="card-description">Understand what debt consolidation is, how it works, and its potential risks</div>
                   <div class="card-more">READ MORE</div>
                 </div>
               </a>
