--- a/public/chat.html
+++ b/public/chat.html
@@ -514,8 +514,8 @@ body, html {
     #app-container {
         height: 100vh;
         max-width: 100%;
-        border-radius: 0;
-        box-shadow: none;
+        border-radius: 16px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
         padding: 5px;
         border: none;
     }
@@ -527,7 +527,7 @@ body, html {
     .message {
         max-width: 85%;
     }
-}
+}   
     </style>
         </head>
         <body>
