--- a/public/dispute-form.html
+++ b/public/dispute-form.html
@@ -255,6 +255,28 @@
   margin: 30px auto;
   padding: 0;
 }
+.card {
+  background: #FFFFFF;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  margin-bottom: 20px;
+  border: 1px solid #E0E0E0;
+  transition: all 0.3s ease;
+}
+.card:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  /*transform: translateY(-5px);*/
+}
+.card h2 {
+  color: #333;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  /*border-bottom: 2px solid #3358EF;*/
+  padding-bottom: 10px;
+}
 .embedded-form-container .container {
   background-color: #ffffff;
   padding: 20px;
@@ -341,6 +363,8 @@
   color: #a0a0a0;
   border-color: #a0a0a0;
   cursor: not-allowed;
+  box-shadow: none;
+  opacity: 0.7;
 }
 .embedded-form-container button.button:active:not(:disabled) {
   box-shadow: none;
@@ -478,18 +502,6 @@
   color: #9494A3;
 }
 /* --- New CSS for Cards and Adjustments --- */
-.embedded-form-container .card {
-  border: 1px solid #e0e0e0;
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-  margin-bottom: 20px;
-  background-color: #fafafa;
-}
-.embedded-form-container .card .form-section h2 {
-  margin-top: 0;
-  margin-bottom: 15px;
-}
 /* Style the select elements to adjust chevron */
 .embedded-form-container select {
   appearance: none;
@@ -874,7 +886,7 @@ document.addEventListener("DOMContentLoaded", async function() {
     </div>
     <div class="footer-divider"></div>
     <div class="footer-bottom">
-      <div class="footer-copyright">© 2025 DebtCat. All rights reserved | Developed and authored with AI assistance ✨</div>
+      <div class="footer-copyright"> 2025 DebtCat. All rights reserved | Developed and authored with AI assistance </div>
       <div class="footer-legal">
         <a href="/s/tos.html" target="_blank" class="footer-legal-link">Terms Of Service</a>
         <a href="/s/refund.html" target="_blank" class="footer-legal-link">Refund Policy</a>
