--- a/public/articles-static/old-debt.html
+++ b/public/articles-static/old-debt.html
@@ -12,6 +12,8 @@
   <meta content="6e09m7Tfl6u4e-eTXMXpwCbUlW_YC8oVpyv0EL-XU9k" name="google-site-verification">
   <link href="/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/css/fontawesome.css" rel="stylesheet" type="text/css">
+  <link href="/css/webflow.css" rel="stylesheet" type="text/css">
+  <link href="/css/debtcat.webflow.css" rel="stylesheet" type="text/css">
   <link href="/css/static-articles.css" rel="stylesheet" type="text/css">
   <link href="/css/footer.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -72,7 +74,6 @@
 <!-- Footer -->
 <!-- Footer -->
 <!-- Footer -->
-<!-- Footer -->
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-nav">
@@ -106,7 +107,7 @@
     </div>
     <div class="footer-divider"></div>
     <div class="footer-bottom">
-      <div class="footer-copyright">© 2025 DebtCat. All rights reserved | Developed and authored with AI assistance ✨</div>
+      <div class="footer-copyright"> 2025 DebtCat. All rights reserved | Developed and authored with AI assistance </div>
       <div class="footer-legal">
         <a href="/s/tos.html" target="_blank" class="footer-legal-link">Terms Of Service</a>
         <a href="/s/refund.html" target="_blank" class="footer-legal-link">Refund Policy</a>
